added crud operations for albums and respective endpoints
